<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/image02"
        android:gravity="center_horizontal"
        android:orientation="vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_name"
        android:textColor="#0D47A1"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/admin_id"
        android:textColor="#0D47A1"
        android:textSize="23sp"
        android:textStyle="bold"
        android:contentDescription="@string/admin_id"/>

    <EditText
        android:id="@+id/admin_id"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/type_id"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_pw"
        android:textColor="#0D47A1"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/admin_password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/type_pw"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/admin_login_button"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#0D47A1"
        android:text="@string/login_Enter" />


</LinearLayout>