<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mem_bg4"
    tools:context=".Members_mgt"
    tools:layout_editor_absoluteX="4dp"
    tools:layout_editor_absoluteY="85dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="656dp"
        android:text="@string/mem_title"
        android:textColor="#023678"
        android:textSize="28sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/card_no"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/mem_card_no"
        android:importantForAutofill="no"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mem_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/member_name"
        android:layout_width="250dp"
        android:inputType="text"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/mem_name"
        android:importantForAutofill="no"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_no" />

    <EditText
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/mem_add"
        android:importantForAutofill="no"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/unpaid_due"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member_name" />

    <EditText
        android:id="@+id/unpaid_due"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/mem_due"
        android:importantForAutofill="no"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />


    <EditText
        android:id="@+id/phone_no"
        android:inputType="number"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/admin_menu_button_shape"
        android:gravity="center"
        android:hint="@string/mem_phone"
        android:importantForAutofill="no"
        android:textColorHint="#0D47A1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unpaid_due"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/mem_create"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:backgroundTint="#0D47A1"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <Button
        android:id="@+id/mem_read"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:backgroundTint="#0D47A1"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="@+id/mem_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/mem_update"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:backgroundTint="#0D47A1"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/mem_delete"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:backgroundTint="#0D47A1"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
    

</androidx.constraintlayout.widget.ConstraintLayout>